# 3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  cg3D.pro  rules.mk  vars.mk
jb/: .exrc  Makefile
jb/model/: main2.cpp
jb/shaders/: fragment_shader.glsl  geometric_shader.glsl
jb/src/: box.cpp  box.hpp  camera.cpp  camera.hpp  consts.hpp  data.cpp  data.hpp  image.cpp  image.hpp  log.cpp  log.hpp  main.cpp  main.cpp.old  polygon.cpp  polygon.hpp  renderTree.cpp  renderable.hpp  rotation.cpp  rotation.hpp  shader.cpp  tags  terrain.hpp  types.cpp  types.hpp  types_c.taghl  utils.hpp  window.cpp  window.hpp
modules/: CUDA_compute_capability.c  CUDA_compute_capability.cmake  FindALUT.cmake  FindLog4cpp.cmake  FindQGLViewer.cmake
obj_files/: Sea_Gul.7z
obj_files/Aqua_Plants-5/: Aqua Plants-5.3ds  Aqua Plants-5.FBX  Aqua Plants-5.max  Aqua Plants-5.obj.mtl  Free 3D Model Library.url
obj_files/Octopus/: OCTOPUS.MTL  octopus.mtl
obj_files/Sea_Gul/: SEAGUL.3DS  SEAGUL.max  SEAGUL.mtl
obj_files/White Shark/: wshark.mtl
obj_files/White_Shark/: wshark.mtl
obj_files/boat/: boat.mtl
obj_files/crab/: 3D Model of red crab.rar  CRAB_L.obj.mtl
obj_files/octopus/: OCTOPUS_.obj.mtl
shaders/: fog.glsl  fragment_shader.glsl  general_lighting_fs.glsl  general_lighting_vs.glsl  light.glsl  vertex_shader.glsl  water.frag  water.vert
shaders/common/: common_lighting_fs.glsl  common_lighting_vs.glsl  fs.glsl  vs.glsl  vs_passthrought.glsl
shaders/instance/: instance_fragment_shader.glsl  instance_vertex_shader.glsl
shaders/marchingCubes/: density_fs.glsl  density_gs.glsl  density_vs.glsl  draw_fs.glsl  draw_vs.glsl  marchingCube_fs.glsl  marchingCube_gs.glsl  marchingCube_vs.glsl  normals_fs.glsl  normals_gs.glsl  normals_vs.glsl  test_fs.glsl  test_vs.glsl
shaders/particle/: fs.glsl  instance_geometry_shader.glsl  particle_fs.glsl  particle_gs.glsl  particle_vs.glsl  spring_fs.glsl  spring_vs.glsl  vs.glsl
shaders/seeweeds/: fs.glsl  vs.glsl
shaders/skybox/: fs.glsl  vs.glsl
shaders/sphere/: fs.glsl  tcs.glsl  tes.glsl
shaders/terrain/: fs.glsl  vs.glsl
shaders/waves/: water.frag  water.vert
src/: BodyPart.cpp  BodyPart.h  Cylinder.cpp  Node.cpp  Node.h  Ragdoll.cpp  Ragdoll.h  SeaDiver.cpp  SeaDiver.h  Trunk.cpp  Trunk.h  cube.cpp  cylinder.cpp  cylinder.h  main.cpp  renderable.cpp  renderable.h  viewer.cpp  viewer.h  waves.cpp  waves.h
src/diver/: Arm.h  BodyPart.h  Dimensions.h  Head.h  Pipe.cpp  Pipe.h  Ragdoll.h  SeaDiver.cpp  SeaDiver.h  Thigh.h  Trunk.cpp  Trunk.h
src/kernels/: kernel.cu  kernel.h  kernelHeaders.h  particles.cu
(+192 files in other folders)
